<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.opensourcephysics</groupId>
  <artifactId>tracker</artifactId>
  <version>6.3.5</version>
	<properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<repositories>
	  <repository>
	    <id>olivier-ayache-xuggler</id>
	    <url>https://dl.cloudsmith.io/public/olivier-ayache/xuggler/maven/</url>
	    <releases>
	      <enabled>true</enabled>
	      <updatePolicy>always</updatePolicy>
	    </releases>
	    <snapshots>
	      <enabled>true</enabled>
	      <updatePolicy>always</updatePolicy>
	    </snapshots>
	  </repository>
	  <repository>
	    <name>Central Portal Snapshots</name>
	    <id>central-portal-snapshots</id>
	    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
	    <releases>
	      <enabled>false</enabled>
	    </releases>
	    <snapshots>
	      <enabled>true</enabled>
	    </snapshots>
	  </repository>
	</repositories>

  <dependencies>
	<dependency>
		<groupId>org.opensourcephysics</groupId>
		<artifactId>osp</artifactId>
		<version>6.3.5-SNAPSHOT</version>
	</dependency>
	<dependency>
	  <groupId>xuggle</groupId>
	  <artifactId>xuggle-xuggler-server-all</artifactId>
	  <version>5.7.0-20210422.000415-2</version>
	</dependency>
	<dependency>
	    <groupId>com.avpkit</groupId>
	    <artifactId>avpkit-core</artifactId>
	    <version>1.0.0-SNAPSHOT</version>
	</dependency>
  </dependencies>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.15.0</version>
            <configuration>
          		<release>11</release>
            </configuration>
        </plugin>
	    <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-jar-plugin</artifactId>
	        <version>3.5.0</version>            
	        <configuration>
	            <archive>
	                <manifest>
	               		<addClasspath>true</addClasspath>
		                <classpathLayoutType>custom</classpathLayoutType>
		                <customClasspathLayout>$${artifact.artifactId}.jar</customClasspathLayout>                    
						<mainClass>org.opensourcephysics.cabrillo.tracker.Tracker</mainClass>
	                </manifest>
	            </archive>
	        </configuration>
	    </plugin>
	   <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.6.2</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                    	<minimizeJar>true</minimizeJar>
		              <artifactSet>
		                <excludes>
		                  <exclude>com.avpkit:avpkit-core</exclude>
		                  <exclude>xuggle:xuggle-xuggler-server-all</exclude>
		                  <exclude>commons-cli:commons-cli</exclude>
		                  <exclude>ch.qos.logback:*</exclude>
		                </excludes>
		              </artifactSet>
                        <filters>
			                <filter>
			                  <artifact>org.opensourcephysics:osp</artifact>
			                  <excludes>
			                    <exclude>test/**</exclude>
			                    <exclude>debugging/**</exclude>
			                    <exclude>demo/**</exclude>
			                    <exclude>demoJS/**</exclude>
			                    <exclude>csm/**</exclude>
			                    <exclude>davidson/**</exclude>
			                  </excludes>
			                </filter>
			                <filter>
			                  <artifact>org.opensourcephysics:tracker</artifact>
			                  <excludes>
			                    <exclude>test/**</exclude>
			                    <exclude>org/opensourcephysics/media/xuggle/**</exclude>
			                  </excludes>
			                </filter>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>META-INF/*.SF</exclude>
                                    <exclude>META-INF/*.DSA</exclude>
                                    <exclude>META-INF/*.RSA</exclude>
                                </excludes>
                            </filter>
                        </filters>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>org.opensourcephysics.cabrillo.tracker.Tracker</mainClass>
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
  </build>
</project>